# hero-clicker

./: .gitignore  Cargo.toml  README.md
clicker_core/: Cargo.toml
clicker_core/src/: autoclicker.rs  events.rs  gold.rs  hero.rs  lib.rs  network.rs
client/: Cargo.toml
client/src/: buffer_events.rs  camera.rs  gold.rs  hero.rs  main.rs  menu.rs  multiplayer.rs  render.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs
