[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = [
    "client",
    "server"
]

[workspace.dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

