[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy-inspector-egui = "0.13"
bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_renet = "0.0.5"
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3.1"
renet_visualizer = "0.0.2"